--- a/todo
+++ b/todo
@@ -1,9 +1,10 @@
 Todo:
-1.多账号、多配置系统
-2.搜索功能增强
-3.目录额外功能（隐藏、加密加强）
-4.文件排序功能加强
-5.静态资源本地化
-6.路径优化
-7.后台刷新任务执行(创建队列)
+
+1.搜索功能增强
+2.目录额外功能（隐藏、加密加强）
+3.文件排序功能加强
+4.静态资源本地化
+5.路径优化
+6.后台刷新任务执行(创建队列)
+7.整合部分命令
 
