--- a/todo
+++ b/todo
@@ -1,10 +1,10 @@
 Todo:
-
 1.搜索功能增强
 2.目录额外功能（隐藏、加密加强）
 3.文件排序功能加强
-4.静态资源本地化
-5.路径优化
+4.静态资源优化
+5.路径优化（可自定义）
 6.后台刷新任务执行(创建队列)
 7.整合部分命令
+8.上传、搜索频次设置
 
